--- a/page1.html
+++ b/page1.html
@@ -496,7 +496,7 @@
 <h3 id="strides">strides</h3>
 <p>Stride is the number of pixels shifts over the input matrix. When the stride is 1 then we move the filters to 1 pixel at a time. When the stride is 2 then we move the filters to 2 pixels at a time and so on. The below figure shows convolution would work with a stride of 2.</p>
 <p style="text-align: center;">
-<img style="max-width: 80%; border-radius:8px;" src="img/basics/stride.png"> </img>
+<img style="max-width: 80%; border-radius:8px;" src="img/basics/stride.PNG"> </img>
 </p>
 
 <h3 id="padding">Padding</h3>
