--- a/page2.html
+++ b/page2.html
@@ -483,7 +483,7 @@
 </ul>
 <h3 id="project-layout">Project Layout</h3>
 <p style="text-align: center;">
-<img style="max-width: 80%; border-radius:8px;" src="img/overview/layout.png"> </img>
+<img style="max-width: 80%; border-radius:8px;" src="img/overview/layout.PNG"> </img>
 </p>
                 
               
