--- a/page8.html
+++ b/page8.html
@@ -490,27 +490,27 @@
 <li>go to "https://id.heroku.com/login" and login to the Heroku. its completely free</li>
 </ul>
 <p style="text-align: center;">
-<img style="max-width: 80%; border-radius:8px;" src="img/deployment/deploy_1.png"> </img>
+<img style="max-width: 80%; border-radius:8px;" src="img/deployment/deploy_1.PNG"> </img>
 </p>
 
 <h4 id="create-a-new-app">Create a new app</h4>
 <p style="text-align: center;">
-<img style="max-width: 80%; border-radius:8px;" src="img/deployment/deploy_2.png"> </img>
+<img style="max-width: 80%; border-radius:8px;" src="img/deployment/deploy_2.PNG"> </img>
 </p>
 
 <h4 id="connect-to-github">Connect to Github</h4>
 <p style="text-align: center;">
-<img style="max-width: 80%; border-radius:8px;" src="img/deployment/deploy_3.png"> </img>
+<img style="max-width: 80%; border-radius:8px;" src="img/deployment/deploy_3.PNG"> </img>
 </p>
 
 <h4 id="select-a-github-repo">Select a Github Repo</h4>
 <p style="text-align: center;">
-<img style="max-width: 80%; border-radius:8px;" src="img/deployment/deploy_4.png"> </img>
+<img style="max-width: 80%; border-radius:8px;" src="img/deployment/deploy_4.PNG"> </img>
 </p>
 
 <h4 id="deploy">Deploy</h4>
 <p style="text-align: center;">
-<img style="max-width: 80%; border-radius:8px;" src="img/deployment/deploy_5.png"> </img>
+<img style="max-width: 80%; border-radius:8px;" src="img/deployment/deploy_5.PNG"> </img>
 </p>
                 
               
