--- a/page9.html
+++ b/page9.html
@@ -379,7 +379,7 @@
                 
                 <h1 id="output">Output</h1>
 <p style="text-align: center;">
-<img style="max-width: 80%; border-radius:8px;" src="img/overview/out_1.png"> </img>
+<img style="max-width: 80%; border-radius:8px;" src="img/overview/out_1.PNG"> </img>
 </p>
 
 <h1 id="references">References</h1>
