--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 <p>Convolutional Neural Networks (ConvNets or CNNs) are a category of Neural Networks that have proven very effective in areas such as image recognition and classification. ConvNets have been successful in identifying faces, objects and traffic signs apart from powering vision in robots and self driving cars.</p>
 <p>The main task of image classification is acceptance of the input image and the following definition of its class.This is what people learn from their birth.But the computer sees the pictures quite differently:</p>
 <p style="text-align: center;">
-<img style="max-width: 80%; border-radius:8px;" src="img/intro/human_cnn.png"> </img>
+<img style="max-width: 80%; border-radius:8px;" src="img/intro/human_cnn.PNG"> </img>
 </p>
 
 <h3 id="cnn-architecture">CNN Architecture</h3>
